<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EncryptedPreferencesActivity"
    android:orientation="vertical"
    android:padding="12dp">

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/enter_name"
        android:autofillHints="@string/enter_name"
        android:inputType="text"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/edtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/enter_age"
        android:autofillHints="@string/enter_name"
        android:inputType="number"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt_preference"
        android:layout_marginTop="8dp"
        android:onClick="encrypt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt_preference"
        android:layout_marginTop="8dp"
        android:onClick="decrypt"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_marginTop="8dp"
        android:onClick="clear"/>

    <TextView
        android:id="@+id/txtEncrypted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypted_text"
        android:layout_marginTop="8dp"/>

</LinearLayout>