<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <Button
        android:id="@+id/btnNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="notification"/>

    <Button
        android:id="@+id/btnThread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thread"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNotification"
        android:onClick="thread"/>

    <Button
        android:id="@+id/btnSharePreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypted_shared_preferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnThread"
        android:onClick="sharedPreferences"/>

    <Button
        android:id="@+id/btnForegroundService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSharePreference"
        android:onClick="foregroundService"/>

    <Button
        android:id="@+id/btnIntentService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intent_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForegroundService"
        android:onClick="intentService"/>

    <Button
        android:id="@+id/btnBoundService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bound_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIntentService"
        android:onClick="boundService"/>

</androidx.constraintlayout.widget.ConstraintLayout>